--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
         </section>
         <!--Наша команда-->
-        <section class="section section-team">
+        <section class="section section--team">
             <div class="container">
                 <h2 class="title">Наша команда</h2>
                 <ul class="team">
