--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
         <!--фильтры-->
         <section class="portfolio-title section">
             <h1 class="text-hidden">portfolio</h1>
-            <div class="container--filter">
+            <div class="container">
                 <ul class="filter">
                     <li class="filter__item">
                         <button type="button" class="secondary__button">Все</button>
