--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="page-header">
         <div class="header container">
             <!--лого-->
-            <a class="logo" href="index.html">Web<span class="logo logo--dark">Studio</span></a>
+            <a class="logo" href="index.html">Web<span class="logo logo--dark">Studio</span></a>            
             <nav>
                 <ul class="site-nav">
                     <li class="site-nav__item"><a href="./index.html" class="site-nav__label site-nav__label--current">Студия</a></li>
@@ -42,6 +42,19 @@
                         +38 096 111-11-1</a>
                 </li>
             </ul>
+
+            <button class="menu-btn" js-open-menu>
+                <svg class="menu-icon">
+                    <use href="./images/menu.svg#icon-menu"></use>
+                </svg>
+            </button>
+            <div class="mobile-menu" js-menu-container>
+                <button class="close-btn" js-close-menu>
+                    <svg class="close-icon">
+                        <use href="./images/menu.svg#icon-close"></use>
+                    </svg>
+                </button>
+            </div>
         </div>
     </header>
     <main> 
@@ -105,9 +118,9 @@
             </div>
         </section>
         <!--Чем мы занимаемся-->
-        <section class="section">
+        <section class="section section__work">
             <div class="container">
-                <h2 class="title title__work">Чем мы занимаемся</h2>
+                <h2 class="title">Чем мы занимаемся</h2>
                 <ul class="work">
                     <li class="work__icon">
                         <div class="work__title">
@@ -448,6 +461,7 @@
         </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
